# Hugs

./: Credits  Defs.mk  Install  License  Makefile  MkDefs.in  RPM.mk  Readme  aclocal.m4  configure  configure.ac  darcs-all  fp-platform  hugs98.nsi  hugs98.spec  package-list
ac_macros/: ice_prog_cpp_traditional.m4
debian/: hugs.install  rules
demos/: Calendar.hs  Eliza.hs  Expr.hs  Ldfs.hs  Literate.lhs  Makefile.in  Say.hs
demos/hugslibs/: HugsLibs.hs  Interact.hs
demos/prolog/: Prolog.hs  StackEngine.hs
docs/: Credits  Makefile  Makefile.in  editor-notes.txt  ffi-notes.txt  hugs.1  hugs.1.in  hugs.man  libraries-notes.txt  mdo-notes.txt  observe-notes.txt  options.txt  packages.txt  server.html  server.tex  win32-notes.txt  windows-notes.txt  winhugs-notes.txt  zipcomp-notes.txt
docs/building/: unix.txt  win32.txt
docs/users_guide/: Makefile  Makefile.in  commands.sgml  extensions.sgml  faq.xml  haskell98.sgml  haskell98.xml  hugs-ug.css  hugs-ug.dsl  hugs-ug.xsl  hugs_ghc.sgml  hugs_ghc.xml  hugs_only.sgml  hugs_only.xml  install.sgml  introduction.sgml  introduction.xml  license.sgml  miscellaneous.sgml  miscellaneous.xml  options.sgml  options.xml  others.xml  running.sgml  users_guide.sgml  users_guide.xml  using_hugs.sgml  using_hugs.xml  xml2sgml.sed
dotnet/: ANNOUNCE
dotnet/doc/: dotnet-ffi.html  dotnet-lib.html  dotnet.html  examples.html
dotnet/lib/: DotNetOld.hs  Dotnet.hs
dotnet/tools/: App.cs  AssemblyInfo.cs  HsOutput.cs  Makefile  TypeInfo.cs
hsc2hs/: Main.hs  hsc2hs.cabal
include/: GreenCard.h
lib/: Array.hs  CPUTime.hs  Char.hs  Directory.hs  IO.hs  Ix.hs  List.hs  Locale.hs  Maybe.hs  Monad.hs  Numeric.hs  Prelude.hs  Quote.hs  Random.hs  Ratio.hs  System.hs  Time.hs
lib/exts/: Addr.hs  Bits.hs  CString.hs  CTypes.hs  CVar.lhs  Chan.lhs  Channel.lhs  ChannelVar.lhs  ConcBase.hs  Concurrent.lhs  Dynamic.lhs  Exception.hs  FiniteMap.lhs  Foreign.hs  ForeignObj.hs  ForeignPtr.hs  FunPtr.hs  Html.lhs  HtmlBlockTable.lhs  HugsStorable.hs  IOExts.hs  IORef.lhs  Int.hs  LazyST.hs  MVar.lhs  MarshalAlloc.hs  MarshalArray.hs  MarshalError.hs  MarshalUtils.hs  Memo.hs  Merge.lhs  MonadCont.lhs  MonadEither.lhs  MonadError.lhs  MonadFix.lhs  MonadIdentity.lhs  MonadList.lhs  MonadRWS.lhs  MonadReader.lhs  MonadRec.hs  (+37 more)
lib/hugs/: CVHAssert.hs  GenericPrint.hs  HugsDynamic.hs  HugsInternals.hs  HugsLibs.hs  IOExtensions.hs  OldWeak.hs  Quote.hs  Sequence.hs  Trace.hs  Trex.hs
libraries/: Makefile.in  Prelude.hs  aclocal.m4  configure.ac
libraries/Hugs/: Array.hs  Char.hs  ConcBase.hs  Exception.hs  ForeignPtr.hs  IO.hs  IOArray.hs  IOExts.hs  Int.hs  Internals.hs  LazyST.hs  Memo.hs  Numeric.hs  Observe.lhs  Prelude.hs  Ptr.hs  ST.hs  StablePtr.hs  Storable.hs  Storable_aux.c  Storable_aux.h  System.hs  Time.hs  Trace.hs  Trex.hs  Unicode.hs  Weak.hs  Word.hs
libraries/Hugs/Array/: Base.hs
libraries/hugsbase/: hugsbase.cabal
libraries/hugsbase/Hugs/: Array.hs  ByteArray.hs  Char.hs  ConcBase.hs  Exception.hs  IO.hs  IOArray.hs  IOExts.hs  Int.hs  Prelude.hs  ST.hs
libraries/include/: MachDeps.h
libraries/tools/: HugsPackage.hs  HugsSetup.hs  config.in  convert_libraries  cpphs.sh.in  get_pkg_field  hugs-package.in  make_bootlib  test_libraries
src/: GreenCard.h  HsFFI.h  HugsAPI.h  Makefile.in  MkDepend.in  MkInstal.in  array.c  bignums.c  builtin.c  builtin.h  char.c  char.h  command.h  compiler.c  config.h.in  connect.h  corehugs.c  dirprim.c  edit.c  epoc.c  errors.c  errors.h  evaluator.c  evaluator.h  ffi.c  goal.c  hugs.c  hugs32.rc  hugsscript.c  input.c  interns.c  iomonad.c  machdep.c  machdep.h  machine.c  module.c  module.h  observe.c  observe.h  options.h.in  (+36 more)
src/bcc32/: Makefile  config.h  options.h
src/djgpp2/: Makefile  config.h  options.h
src/dotnet/: HugsServ.cpp  HugsServ.h  HugsWrapper.cs  HugsWrapper.h  Invoker.cpp  Makefile  config.h  options.h  prim.cpp  prim.h
src/epoc/: README  config.h  demos_readme  epoc.h  epoc_input.c  epoc_input.h  eshell_readme  hugs.mmp  hugs.pkg  options.h
src/mac/: README.txt  config.h  launch.c  options.h
src/machugs/: config.h  hugs.mcp.xml  hugs.r  options.h
src/msc/: Makefile  config.bat  config.h  ffihugs.bat  ffihugs.vcproj  hugs.dsp  hugs.sln  options.h  runhugs.dsp
src/unix/: MachDeps.h  Makefile  README  acconfig.h  aclocal.m4  configure  configure.in  convert_hslibs  convert_libraries  convert_package  hsc_kludge  hugs-package.in  mkunitable  params.in  test_libraries
src/win32/: Makefile  config.bat  config.sh  options.h
src/winhugs/: DlgAbout.c  DlgMain.c  DlgOptions.c  Editors.c  General.c  Header.h  IORemap.c  IORemap.h  Legacy.c  Makefile  MruFiles.c  Registry.c  RtfWindow.c  RtfWindow.h  ScriptMan.c  StartCode.c  WINFRAME.H  WINSTLN.H  WINTOOLB.H  Winbrows.c  Winframe.c  Winframe.h  Winhint.c  Winhint.h  Winhugs.h  Winmenu.h  Winstln.c  Winstln.h  Wintext.c  Wintext.h  Wintoolb.c  Wintoolb.h  Winutils.c  Winutils.h  config.h  menusbm.c  options.h  resource.h  resrc1.h  winhugs.c  (+3 more)
tests/: Readme  config.in  runstdtest  testScript  testScript.in
tests/ffi/: Callback.hs  Callback.output  FileIO.hs  FileIO.output  FileIO_aux.c  FileIO_aux.h  Forms.hs  Sin.hs  Sin.output  Sparc.hs  Sparc.output  String.hs  String.output  Types.hs  callback.c  callback.h  callbacks.c  callbacks.h  forms_aux.c  forms_aux.h  types_aux.c  types_aux.h
tests/libs/: Addr.input  Addr.output  Edison.hs  FixIO.lhs  FixIO.output  Ptr.input  Ptr.output  complex1.output  dirTest.hs  dirTest.input  dirTest.output  except1.hs  except1.input  except1.output  intTest.hs  intTest.output  ioTest1.hs  ioTest1.input  ioTest1.output  libs.hs  libs1.hs  libs2.hs  libs3.hs  list1.hs  list1.output  prodcon.hs  prodcon.input  prodcon.output  system1.hs  system1.output  testAddr.hs  testPtr.hs
tests/misc/: T1.hs  T4.hs  T6.hs  gc.hs  gc1.output  gc2.output  ioerror1.hs  iohandle.hs  iohandle.output  mutvars.hs  mutvars.output  mvar.hs  mvar.output  ptrEq.output  refs.hs  refs.output  runst.hs  testDebug.hs  (+1 more)
tools/: ParsePkgConf.hs  get_ld_options  get_libraries  hugs-hc  prelude.patch
(+351 files in other folders)
